Cambios docker-compose
